// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BreadCrumbItems /> should render multiple items with slash in between them 1`] = `
<div
  className="sc-bdnxRM dRTyhu"
>
  <div
    className="sc-bdnxRM dRTyhu"
  >
    <a
      className="sc-bdnxRM hiWSzS cap-link"
      href="/projects"
    >
      Project list
    </a>
    <span
      className="sc-bdnxRM dTrxhp cap-text"
    >
      /
    </span>
  </div>
  <div
    className="sc-bdnxRM dRTyhu"
  >
    <p
      className="sc-bdnxRM hCilNi cap-text"
    >
      New Project
    </p>
  </div>
</div>
`;

exports[`<BreadCrumbItems /> should render one single item 1`] = `
<div
  className="sc-bdnxRM dRTyhu"
>
  <div
    className="sc-bdnxRM dRTyhu"
  >
    <p
      className="sc-bdnxRM hCilNi cap-text"
    >
      Project list
    </p>
  </div>
</div>
`;
